--- a/popup.html
+++ b/popup.html
@@ -1,26 +1,13 @@
 <!doctype html>
 <html>
   <head>
-      <script>
-  
-      function myFunction()
-      {
-        alert("The form will be submitted");
-      }
-  </script>
-  
-    <title>Enter the credentials</title>
-    <style>
-      body {
-        min-width: 500px;
-        overflow-x: hidden;
-      }
-    </style>
+     
   </head>
 <body>
   <form >
   <input type="password" placeholder="password" id="passwd-in"></input>
-  <input type="button" value="submit" onclick="myFunction()"></input>
   </form>
+  <button id="clickMe" type="submit">Add</button>
+  <script src="new.js"></script>
 </body>
 </html>
